My complex webpage

--- a/html_basic/index.html/base_index.html
+++ b/html_basic/index.html/base_index.html
@@ -8,12 +8,51 @@
   <body>
     <h1> Military Aircrafts</h1> 
 <p>They are any fixed-wing or rotary-wing aircraft that is operated by a legal military of any type. They are divided into 2</p>
+<p> 
+  <ul> 
+    <li> Combat</li>
+    <li>Non combat</li>
+  </ul>
+</p>
  <h2>Combat Aircrafts</h2>
  <p>These are aircrafts designed to destroy enemy equipment or personnelusing their own aircraft ordinance.</p>
  <h2> Non-combat Aircrafts</h2>
  <p> These are aircrafts designed to carry weapons for self defense</p>
  <h3> Other types of aircrafts</h3>
  <p> Experimental Aircrafts</p>
-  
+    <img src="/Images/Twitter9d6002c.jpg" height="300" width=200 class="img-fluid" alt="...">
+    <ol> 
+      <li><a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\tweets.html">My tweets homepage</a>
+      </li>
+    </ol>
+    <p>Made by Makena Kaimenyi - <a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\tweets.html" target="_blank">here</a>.</p>
+    <table> 
+      <tr> 
+        <th> Name</th>
+        <th> Age</th>
+        <th>Country</th>
+      </tr>
+      <tr>
+        <td>John</td>
+        <td>25</td>
+        <td>USA</td>
+      </tr>
+      <tr>
+        <td>Emily</td>
+        <td>28</td>
+        <td>Canada</td>
+      </tr>
+      <tr> 
+      <td>Michael</td>
+      <td>32</td>
+      <td>Australia</td>
+    </tr>
+     <tr>
+      <td>Sophia</td>
+      <td>21</td>
+      <td>UK </td>
+
+      </tr>
+    </table>
+
   </body> 
-</html>
