my cool website

--- a/html_basic/tweets.html/base_index.html
+++ b/html_basic/tweets.html/base_index.html
@@ -6,25 +6,43 @@
     <title>My test page</title>
   </head>
   <body>
-    <h1> Military Aircrafts</h1> 
-<p>They are any fixed-wing or rotary-wing aircraft that is operated by a legal military of any type. They are divided into 2</p>
-<p>
-  <ul> 
-    <li> Combat</li>
-    <li>Non combat</li>
-  </ul>
-</p>
- <h2>Combat Aircrafts</h2>
- <p>These are aircrafts designed to destroy enemy equipment or personnelusing their own aircraft ordinance.</p>
- <h2> Non-combat Aircrafts</h2>
- <p> These are aircrafts designed to carry weapons for self defense</p>
- <h3> Other types of aircrafts</h3>
- <p> Experimental Aircrafts</p>
-    <img src="/Images/Twitter1bc742f.jpg" height="300" width=200 class="img-fluid" alt="...">
-    <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">The best job in Kenya is being a judge. (1) Salary is good, kshs 700k to 1.5 m plus benefits. (2) Depending on many variables(i.e., election petitions, station, division), if you are corrupt, you can make from 50 m to 500m annually...yes some judges make over 0.5 billion through…</p>&mdash; Ahmednasir Abdullahi SC (@ahmednasirlaw) <a href="https://twitter.com/ahmednasirlaw/status/1677222283901906944?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  <ol> 
-    <li><a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\index.html"> My home webpage </a>
-    </li>
-  </ol>
- <p>Made by Makena Kaimenyi - <a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\tweets.html" target="_blank">here</a>.</p> 
+    <header> <nav><ol> 
+      <li><a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\index.html"> My home webpage </a>
+      </li>
+    </ol></nav>
+  </header>
+    <main><h2>Combat Aircrafts</h2>
+    <p>These are aircrafts designed to destroy enemy equipment or personnelusing their own aircraft ordinance.</p>
+    <h2> Non-combat Aircrafts</h2>
+    <p> These are aircrafts designed to carry weapons for self defense</p>
+    <h3> Other types of aircrafts</h3>
+    <p> Experimental Aircrafts</p>
+       <img src="C:\Users\user\OneDrive\Desktop\alx_html_css\Images\Twitter8a08caf.jpg">
+       <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">The best job in Kenya is being a judge. (1) Salary is good, kshs 700k to 1.5 m plus benefits. (2) Depending on many variables(i.e., election petitions, station, division), if you are corrupt, you can make from 50 m to 500m annually...yes some judges make over 0.5 billion through…</p>&mdash; Ahmednasir Abdullahi SC (@ahmednasirlaw) <a href="https://twitter.com/ahmednasirlaw/status/1677222283901906944?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+     
+   <h1> Military Aircrafts</h1> 
+    <p>They are any fixed-wing or rotary-wing aircraft that is operated by a legal military of any type. They are divided into 2</p>
+    <p>
+      <ul> 
+        <li> Combat</li>
+        <li>Non combat</li>
+      </ul>
+    </p> 
+ <article><h2>Combat Aircrafts</h2>
+  <p>These are aircrafts designed to destroy enemy equipment or personnelusing their own aircraft ordinance.</p>
+  <h2> Non-combat Aircrafts</h2>
+  <p> These are aircrafts designed to carry weapons for self defense</p>
+  <h3> Other types of aircrafts</h3>
+  <p> Experimental Aircrafts</p>
+     <img src="C:\Users\user\OneDrive\Desktop\alx_html_css\Images\Twitter8a08caf.jpg">
+     <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">The best job in Kenya is being a judge. (1) Salary is good, kshs 700k to 1.5 m plus benefits. (2) Depending on many variables(i.e., election petitions, station, division), if you are corrupt, you can make from 50 m to 500m annually...yes some judges make over 0.5 billion through…</p>&mdash; Ahmednasir Abdullahi SC (@ahmednasirlaw) <a href="https://twitter.com/ahmednasirlaw/status/1677222283901906944?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   <ol> 
+     <li><a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\index.html"> My home webpage </a>
+     </li>
+   </ol></article>
+  </main>
+    
+   <aside>Placeholder to add comment thread letter</aside>
+  </main>
+<footer><p>Made by Makena Kaimenyi - <a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\index.html\base_index.html" target="_blank">here</a>.</p> </footer> 
   </body> 
