--- a/CSS_basic/tweets.html/base_index.html
+++ b/CSS_basic/tweets.html/base_index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My test page</title>
+    <link href="C:\Users\user\OneDrive\Desktop\alx_html_css\CSS_basic\base.css" rel="stylesheet">
+    <link href="C:\Users\user\OneDrive\Desktop\alx_html_css\CSS_basic\styles.css" rel="stylesheet">
   </head>
   <body>
     <header> <nav><ol> 
@@ -11,17 +13,12 @@
       </li>
     </ol></nav>
   </header>
-    <main>
-      <article><h2>Combat Aircrafts</h2>
+    <main> <article>
+      <h2>Combat Aircrafts</h2>
     <p>These are aircrafts designed to destroy enemy equipment or personnelusing their own aircraft ordinance.</p>
     <h2> Non-combat Aircrafts</h2>
     <p> These are aircrafts designed to carry weapons for self defense</p>
-    <h3> Other types of aircrafts</h3>
-    <p> Experimental Aircrafts</p>
-       <img src="C:\Users\user\OneDrive\Desktop\alx_html_css\Images\Twitter8a08caf.jpg">
-       <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">The best job in Kenya is being a judge. (1) Salary is good, kshs 700k to 1.5 m plus benefits. (2) Depending on many variables(i.e., election petitions, station, division), if you are corrupt, you can make from 50 m to 500m annually...yes some judges make over 0.5 billion through…</p>&mdash; Ahmednasir Abdullahi SC (@ahmednasirlaw) <a href="https://twitter.com/ahmednasirlaw/status/1677222283901906944?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-     
-   <h1> Military Aircrafts</h1> 
+    <h1> Military Aircrafts</h1> 
     <p>They are any fixed-wing or rotary-wing aircraft that is operated by a legal military of any type. They are divided into 2</p>
     <p>
       <ul> 
@@ -41,7 +38,7 @@
      <li><a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\index.html"> My home webpage </a>
      </li>
    </ol></article>
-  </main>
+  
     
    <aside>Placeholder to add comment thread letter</aside>
   </main>
