--- a/html_basic/index.html/base_index.html
+++ b/html_basic/index.html/base_index.html
@@ -13,7 +13,8 @@
         <li><a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\base_index.html">Tweets webpage</a>   
         </li></ol></nav> 
     </header>
- <main><h1> Military Aircrafts</h1> 
+ <main> <article>
+    <h1> Military Aircrafts</h1> 
     <p>They are any fixed-wing or rotary-wing aircraft that is operated by a legal military of any type. They are divided into 2</p>
     <p>
       <ul> 
@@ -22,7 +23,7 @@
       </ul>
     </p> 
  
-     <article> <h2>Combat Aircrafts</h2>
+      <h2>Combat Aircrafts</h2>
     <p>These are aircrafts designed to destroy enemy equipment or personnelusing their own aircraft ordinance.</p>
     <h2> Non-combat Aircrafts</h2>
     <p> These are aircrafts designed to carry weapons for self defense</p>
@@ -33,7 +34,8 @@
      <ol> 
        <li><a href="C:\Users\user\OneDrive\Desktop\alx_html_css\html_basic\index.html"> My home webpage </a>
        </li>
-     </ol> </article></main>
+     </ol> </article>
+    </main>
     
      <aside><p>Placeholder to add comment thread letter</p></aside>
      <article>
